--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,12 @@
 {
   "manifest_version": 3,
-  "version": "1.0",
+  "version": "2.0",
   "name": "Levelup Shortcuts",
   "icons": {
-    "32": "icon.png"
+    "16": "icon.png",
+    "32": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
   },
   "background": {
     "service_worker": "background.js"
