--- a/manifest.json
+++ b/manifest.json
@@ -42,15 +42,24 @@
     },
     "open_record": {
       "description": "open record"
+    },
+    "see_optionsets": {
+      "description": "see optionsets"
     }
   },
   "web_accessible_resources": [
     {
-      "resources": ["godMode.js", "locate.js", "info.js"],
+      "resources": [
+        "godMode.js",
+        "locate.js",
+        "info.js",
+        "dataverse.js",
+        "optionsTab/options.html"
+      ],
       "matches": ["<all_urls>"]
     }
   ],
-  "permissions": ["activeTab"],
+  "permissions": ["tabs"],
   "content_scripts": [
     {
       "matches": [
@@ -58,7 +67,12 @@
         "*://*.crm4.dynamics.com.mcas.ms/*",
         "*://*.crm.dynamics.com/*"
       ],
-      "js": ["content.js", "popup/info.js"]
+      "js": [
+        "content.js",
+        "popup/info.js",
+        "optionsTab/options.js",
+        "dataverse.js"
+      ]
     }
   ]
 }
