--- a/manifest.json
+++ b/manifest.json
@@ -51,6 +51,9 @@
     },
     "quick_field_update": {
       "description": "quick field update"
+    },
+    "execute_fetchxml": {
+      "description": "execute fetchxml"
     }
   },
   "web_accessible_resources": [
@@ -63,7 +66,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.crm4.dynamics.com/*", "*://*.crm4.dynamics.com.mcas.ms/*", "*://*.crm.dynamics.com/*"],
-      "js": ["content.js", "popup/info.js", "optionsTab/options.js", "securityTab/security.js"]
+      "js": ["content.js", "popup/info.js", "optionsTab/options.js", "securityTab/security.js", "fetchTab/fetch.js"]
     }
   ]
 }
