moved godmode and locate logic from separate files to dataverse.js file and removed console logs

--- a/manifest.json
+++ b/manifest.json
@@ -73,7 +73,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["godMode.js", "locate.js", "dataverse.js"],
+      "resources": ["dataverse.js"],
       "matches": ["<all_urls>"]
     }
   ],
